overflow solved

--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -31,7 +31,7 @@
         // overflow: hidden;
 
         .item{
-            height: 150px;
+            // height: 150px;
             width: 220px;
             border-radius: 20px;
             border: 1px solid lightgray;
@@ -54,21 +54,21 @@
             img{
                 width: 100%;
                 height: 100%;
-                // object-fit: cover;
-                // z-index: 1;
+                object-fit: cover;
+                z-index: 1;
             }
 
             &:hover{
                 background-color: $maincolor;
                 img{
                     opacity: 0.2;
-                    // z-index: 0;
+                    z-index: 0;
                 }
             }
 
             .imgproject{
-                // height: 150px;
-                // width: 100%;
+                height: 150px;
+                width: 100%;
                 border-radius: 20px;
             }
 
