--- a/src/components/topbar/Topbar.scss
+++ b/src/components/topbar/Topbar.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 .topbar{
     width: 100%;
-    height: 70px;
+    // height: 70px;
     background-color: white;
     color: $maincolor;
     position: fixed;
